# llm-zoomcamp-2026

./: .gitignore
04-evaluation/: 04-agent-evaluation.ipynb  04-evaluation-ground-truth.ipynb  04-evaluation-search-evaluation.ipynb  04-rag-evaluaton.ipynb  04-search-metrics.ipynb  pyproject.toml
04-evaluation/data/: agent-evaluations.csv  ground_truth-llm-zoomcamp.csv  rag-evaluations-new.csv
05-monitoring/: Dockerfile  Makefile  app.py  assistant.py  dashboard.py  database.sql  db.py  docker-compose.yml  generate_data.py  judge.py  metrics.py  pyproject.toml
dlt-homework/: logfire_pipeline.py  main.py  pyproject.toml  query.py  questions.md
dlthub/: 2026-07-18_agent_traces_analysis_plan.md  2026-07-18_claude_logs_analysis_plan.md  __deployment__.py  agent_traces_dashboard.py  claude_logs_dashboard.py  filesystem_pipeline.py  pyproject.toml  rest_api_pipeline.py
dlthub/.dlt/: .toolkits  config.toml  dev.config.toml  prod.config.toml
llm-zoomcamp-2026-code-vector-search/: Embeddings.ipynb  compose.yml  minsearch.ipynb  pgvector.ipynb  sqlitesearch.ipynb
llm-zoomcamp-2026-onxx/: .gitignore  onnx.ipynb
llm-zoomcamp-hw2/: 02-vector-search.ipynb
llm-zoomcamp-hw4/: o4-evaluation.ipynb  pyproject.toml
llm-zoomcamp-hw5/: FifthExercise.ipynb  main.py  opentelemetry_span_exporters.py  pyproject.toml  questions.md  rag_helper.py  starter.py
