[project]
name = "llm-zoomcamp-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "minsearch>=0.2.0",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.4",
]
