[project]
name = "05-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minsearch>=0.2.0",
    "openai>=2.46.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
]
