[project]
name = "dlt-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.29.0",
    "duckdb>=1.5.4",
    "logfire>=4.37.0",
    "minsearch>=0.2.0",
    "openai>=2.46.0",
    "pydantic-ai>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
